# maurice-tools

./: .gitignore  Brewfile  README.md  install.sh  pyproject.toml
completions/: maurice.bash  maurice.zsh
homebrew-maurice-tools/: README.md
homebrew-maurice-tools/Formula/: maurice-tools.rb
libexec/: doctor  secrets-get  secrets-set  setup  shared_helpers.sh  transcribe  transcribe.py  update
workflows/Transcribe Audio.workflow/Contents/: Info.plist  document.wflow
