[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maurice-tools"
version = "0.1.0"
description = "Maurice Tools - A macOS CLI suite for audio transcription and utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Morris Frank", email = "maurice@morris-frank.dev"}
]
keywords = ["cli", "macos", "transcription", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]

# Pure bash implementation - no Python runtime dependencies required
# The transcribe tool uses curl to call OpenAI API directly

[project.urls]
Homepage = "https://github.com/morris-frank/maurice-tools"
Repository = "https://github.com/morris-frank/maurice-tools"
Issues = "https://github.com/morris-frank/maurice-tools/issues"

[tool.setuptools]
py-modules = []
